# cody-carrental

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/applications/cars/: admin.py  decorators.py  forms.py  functions.py  models.py  urls.py  views.py
src/applications/cars/migrations/: 0001_initial.py  0002_car_daily_price_rental.py  0003_rental_customer.py
src/applications/cars/templates/cars/: brand_detail.html  car_delete.html  car_detail.html  console.html  new_brand.html  new_car.html  new_rental.html  rental_detail.html  rental_email_sent.html  rentals.html
src/applications/cars/templates/cars/email/: rental_customer.html
src/applications/cars/templates/cars/pdf/: cars_report.html
src/applications/cars/tests/: test_models.py  test_views.py
src/applications/core/: functions.py  views.py
src/applications/users/: admin.py  forms.py  functions.py  models.py  urls.py  views.py
src/applications/users/migrations/: 0001_initial.py  0002_usertype.py
src/applications/users/templates/: change_password.html  login.html  logout.html  profile.html  register.html
src/applications/users/tests/: test_users_models.py
src/carrental/: settings.py  urls.py
src/carrental/carrental/: settings.py
src/templates/: base.html  welcome.html
src/templates/email/: base.html
src/templates/pdf/: base.html
