[tool.poetry]
name = "cody-carrental"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "cody_carrental"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"
google-auth = "^2.22.0"
flake8 = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
